# AgenticAI-Project

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  prompts.py  specialized_agents.py  supervisor_agent.py  trading_agent.py
docs/: API.md  ARCHITECTURE.md  STRATEGY.md  USECASES.md
tools/: __init__.py  backtest_tools.py  chart_tools.py  data_tools.py  shariah_tools.py  technical_tools.py
